# grimoire

./: .gitignore  .projectile  README.md  circle.yml
99problems-haskell/01-10/: 01-last-element.hs  02-butlast.hs  03-kth-element.hs  04-list-length.hs  05-reverse.hs  06-palindrome.hs  07-flatten.hs  10-encode.hs  P01-last-element.tests.hs  P01_GetLast.hs  P04-list-length.hs  P05-reverse.hs  P06_IsPalindrome.hs  P07_Flatten.hs  P08-compress.hs  P09-pack.hs  P09_Pack.hs  P10_Encode.hs
99problems-haskell/11-20/: 11-encodeModified.hs  13-encodeDirect.hs  16-dropEvery.hs  18-slice.hs  19-rotate.hs  20-removeAt.hs  P14-dupli.hs
99problems-haskell/21-30/: 21-insert-at.hs  P22-range.hs
Haskell99Problems/: Dockerfile  Haskell99Problems.cabal  LICENSE  readme.org  stack.yaml
Haskell99Problems/01-10/: P01_GetLast_Tests.hs  P01_GetLast_tests.hs  P02_ButLast.hs  P02_ButLast_Tests.hs  P03_KthElement.hs  P04_MyLength.hs  P05_MyReverse.hs  P05_MyReverse_Tests.hs  P07_Flatten.hs  P08_Compress.hs
Haskell99Problems/11-20/: P11_EncodeModified.hs  P12-decode.hs  P12_Decode.hs  P13_EncodeDirect.hs  P14_Dupli.hs  P15-replicate.hs  P15_Replicate.hs  P16_DropEvery.hs  P17-split.hs  P17_Split.hs  P18_Slice.hs  P19_Rotate.hs  P20-removeAt.hs  P20_RemoveAt.hs
Haskell99Problems/21-30/: P21_InsertAt.hs  P22_Range.hs  P23_Random.hs  P24_Lotto.hs  P25_Permute.hs  P26_Combinations.hs
Haskell99Problems/app/: Main.hs
Haskell99Problems/lib/: ListItem.hs  NestedList.hs  SelectElement.hs
Haskell99Problems/test/: Main.hs  P01_GetLast_Tests.hs  P02_ButLast_Tests.hs  P03_KthElement_Tests.hs  P04_MyLength_Tests.hs  P05_MyReverse_Tests.hs  P06_IsPalindrome_Tests.hs  P07_Flatten_Tests.hs  P08_Compress_Tests.hs  P09_Pack_Tests.hs  P10_Encode_Tests.hs  P11_EncodeModified_Tests.hs  P12_Decode_Tests.hs  P13_EncodeDirect_Tests.hs  P14_Dupli_Tests.hs  P15_Replicate_Tests.hs  P16_DropEvery_Tests.hs  P17_Split_Tests.hs  P18_Slice_Tests.hs  P19_Rotate_Tests.hs  P20_RemoveAt_Tests.hs  P21_InsertAt_Tests.hs  P22_Range_Tests.hs  TestLib.hs  lib.hs
