name:                Haskell99Problems
version:             0.1.0.0
synopsis:            (Incomplete) Solution set to the 99 Problems in Haskell.
description:         Please see README.md
homepage:            http://github.com/githubuser/Haskell99Problems#readme
license:             BSD3
license-file:        LICENSE
author:              Adam McCullough
maintainer:          merlinfmct87@gmail.com
copyright:           2015 Adam McCullough
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      01-10, 11-20, 21-30
  exposed-modules:     P01_GetLast,
                       P01_GetLast_Tests,
                       P02_ButLast,
                       P03_KthElement,
                       P04_MyLength,
                       P05_MyReverse,
                       P06_IsPalindrome,
                       P07_Flatten,
                       P08_Compress,
                       P09_Pack,
                       P10_Encode,
                       P11_EncodeModified,
                       P12_Decode,
                       P13_EncodeDirect,
                       P14_Dupli,
                       P15_Replicate,
                       P16_DropEvery,
                       P17_Split,
                       P18_Slice,
                       P19_Rotate,
                       P20_RemoveAt
                       P21_InsertAt,
                       P22_Range
  build-depends:       base >= 4.7 && < 5, QuickCheck
  default-language:    Haskell2010

executable Haskell99Problems-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Haskell99Problems
                     , QuickCheck
  default-language:    Haskell2010

test-suite Haskell99Problems-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Haskell99Problems
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/TheWizardTower/grimoire/Haskell99Problems
