name:                Haskell99Problems
version:             0.1.0.0
synopsis:            (Incomplete) Solution set to the 99 Problems in Haskell.
description:         Please see readme.org
homepage:            http://github.com/githubuser/Haskell99Problems#readme
license:             BSD3
license-file:        LICENSE
author:              Adam McCullough
maintainer:          merlinfmct87@gmail.com
copyright:           2015 Adam McCullough
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      lib, 01-10, 11-20, 21-30
  exposed-modules:     ListItem
                     , NestedList
                     , P01_GetLast
                     , P02_ButLast
                     , P03_KthElement
                     , P04_MyLength
                     , P05_MyReverse
                     , P06_IsPalindrome
                     , P07_Flatten
                     , P08_Compress
                     , P09_Pack
                     , P10_Encode
                     , P11_EncodeModified
                     , P12_Decode
                     , P13_EncodeDirect
                     , P14_Dupli
                     , P15_Replicate
                     , P16_DropEvery
                     , P17_Split
                     , P18_Slice
                     , P19_Rotate
                     , P20_RemoveAt
                     , P21_InsertAt
                     , P22_Range
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable Haskell99Problems-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Haskell99Problems
  default-language:    Haskell2010

test-suite Haskell99Problems-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       TestLib
                     , P01_GetLast_Tests
                     , P02_ButLast_Tests
                     , P03_KthElement_Tests
                     , P04_MyLength_Tests
                     , P05_MyReverse_Tests
                     , P06_IsPalindrome_Tests
                     , P07_Flatten_Tests
                     , P08_Compress_Tests
                     , P09_Pack_Tests
                     , P10_Encode_Tests
                     , P11_EncodeModified_Tests
                     , P12_Decode_Tests
                     , P13_EncodeDirect_Tests
                     , P14_Dupli_Tests
                     , P15_Replicate_Tests
                     , P16_DropEvery_Tests
                     , P17_Split_Tests
                     , P18_Slice_Tests
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       Haskell99Problems
                     , base
                     , tasty
                     , tasty-hunit >= 0.9.2
                     , tasty-quickcheck >= 0.8.4
                     , tasty-smallcheck >= 0.8.0.1
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/TheWizardTower/grimoire/Haskell99Problems
